--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.no-scrollbar::-webkit-scrollbar{
+    display: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.no-scrollbar{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.violet-button{
+    @apply w-full bg-violet border-2 border-borderGrey text-white p-3.5 mt-2 rounded-lg text-sm font-semibold shadow-[0_4px_40px_0px_rgba(104,102,234,0.24)] transition-all duration-300 hover:bg-white hover:text-violet hover:border-violet; 
+}
+
+.grey-button{
+    @apply w-full bg-grey2 border-2 border-borderGrey text-white p-2 rounded-lg text-sm font-semibold transition-all duration-300 hover:bg-white hover:text-violet hover:border-violet; 
+}
+
+.checkbox {
+    @apply relative shrink-0 cursor-pointer appearance-none w-6 h-6 border-2 border-borderGrey rounded bg-black1 outline-none checked:border-violet 
+}
+
+.icon {
+    @apply w-5 h-5 text-violet cursor-pointer
 }
