add onDragEnd function

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-.no-scrollbar::-webkit-scrollbar{
-    display: none;
+::-webkit-scrollbar-thumb {
+    @apply bg-violet rounded-lg
 }
 
-.no-scrollbar{
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+::-webkit-scrollbar {
+    @apply w-1
 }
 
-.violet-button{
+::-webkit-scrollbar:horizontal {
+    @apply h-2
+}
+
+::-webkit-scrollbar-corner {
+    @apply hidden
+}
+
+.violet-button {
     @apply w-full bg-violet border-2 border-borderGrey text-white p-3.5 mt-2 rounded-lg text-sm font-semibold shadow-[0_4px_40px_0px_rgba(104,102,234,0.24)] transition-all duration-300 hover:bg-white hover:text-violet hover:border-violet; 
 }
 
-.grey-button{
+.grey-button {
     @apply w-full bg-grey2 border-2 border-borderGrey text-white p-2 rounded-lg text-sm font-semibold transition-all duration-300 hover:bg-white hover:text-violet hover:border-violet; 
 }
 
